--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "client-user",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.x",
+    "npm": "6.x"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.9",
+    "@angular/cli": "~9.1.7",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
+    "@angular/compiler-cli": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
     "@angular/platform-browser": "~9.1.9",
@@ -22,15 +29,18 @@
     "@auth0/angular-jwt": "^5.0.1",
     "angularx-social-login": "^3.2.1",
     "bootstrap": "3.3.7",
+    "express": "^4.17.1",
     "jquery": "3.5.1",
     "jwt-decode": "^2.2.0",
     "ng-starrating": "^1.0.20",
     "ngx-cookie-service": "^10.0.1",
     "ngx-facebook": "^3.0.0-0",
     "ngx-pagination": "^5.0.0",
+    "path": "^0.12.7",
     "postcss-import": "^12.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
